make the new fast path fall in to uniscribe if the font is missing glyphs to render the text. bug 372636. r=roc